--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "morgan": "1.10.0",
     "socket.io": "^4.8.0",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9"
   }
 }
