--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+
+    "outDir":"./",
+    "rootDir":"./",
     "target": "es2017",
     "module": "es2022",
     "strict": true,
@@ -12,9 +15,12 @@
     ]
   },
   "include": [
-    "server/**/*" // Incluye tus archivos TypeScript
-  ],
+    "client/**/*",
+    "server/**/*" ,
+    "client/script/**/*",
+    "client/html/**/*"
+, ],
   "exclude": [
-    "node_modules" // Excluye node_modules
+    "node_modules" 
   ]
 }
