--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
 
-    "outDir":"./",
+    "outDir":"./dist",
     "rootDir":"./",
-    "target": "es2017",
-    "module": "es2022",
+    "target": "ESNext",
+    "module": "ESNext",
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -17,7 +17,6 @@
   "include": [
     "client/**/*",
     "server/**/*" ,
-    "client/script/**/*",
     "client/html/**/*"
 , ],
   "exclude": [
