--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/server/index.js",
-    "build-and-start": "npm run build && cp -R ./client/css ./dist/client/css && cp ./client/*.html ./dist/client && npm run start",
+    "build-and-start": "npm run build && mkdir -p ./dist/client/css && cp -R ./client/css ./dist/client/css && mkdir -p ./dist/client && cp ./client/index.html ./dist/client && npm run start",
     "dev": "node --watch ./dist/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "morgan": "1.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0",
     "sqlite3": "^5.1.7"
@@ -26,6 +29,9 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
-    "@types/socket.io-client": "^3.0.0"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/socket.io-client": "^3.0.0",
+    "typescript": "^5.6.3"
   }
 }
