fix: resolve server connection

--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "1.0.0",
   "main": "dist/src/index.js",
   "type": "module",
-  
- "scripts": {
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "copy": "cp -R ./public/*.html ./dist && cp -R ./src/chat.css ./dist/src",
-    "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"concurrently \"tsc && node ./dist/src/server.js\" \"vite\""
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "morgan": "^1.10.0",
@@ -34,8 +35,9 @@
     "@types/react-dom": "^18.3.1",
     "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "vite": "^5.4.10"
   }
